[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/player_ship.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Bullet/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/synthetic_laser.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/flight_sound.ogg" type="AudioStream" id=5]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.990909 ), 0.0, 0.0, 0, 0, Vector2( 0.994624, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=1]
radius = 30.2655

[node name="Player" type="RigidBody2D"]
pause_mode = 1
contacts_reported = 1
contact_monitor = true
linear_damp = 1.0
angular_damp = 5.0
script = ExtResource( 2 )
Bullet = ExtResource( 3 )
fire_rate = 0.25
engine_power = 500
spin_power = 15000

[node name="Exhaust" type="CPUParticles2D" parent="."]
position = Vector2( 0, -9 )
rotation = 1.5708
scale = Vector2( 6, 2 )
emitting = false
amount = 400
spread = 90.0
gravity = Vector2( 0, 98 )
initial_velocity = 5.0
scale_amount_curve = SubResource( 2 )
color = Color( 0.886275, 0.0431373, 0.0431373, 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 50, 0 )

[node name="GunTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="EngineSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Player_body_shape_entered"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
